third test commit

--- a/application/views/index.html
+++ b/application/views/index.html
@@ -5,6 +5,8 @@
 <body>
 
 <p>Directory access is forbidden.</p>
-<p>This is a Test. This is the second test.</p>
+<p>This is a Test.</p>
+<p>This is the second test.</p>
+<p>Finally a third test.</p>
 </body>
 </html>
