--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4259,7 +4259,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-static-top .navbar-collapse,
   .navbar-fixed-bottom .navbar-collapse {
     padding-right: 0;
-    padding-left: 0;
+    padding-left: 0;;
   }
 }
 .navbar-fixed-top .navbar-collapse,
