Course Edit and Result View and Errors Now Working

--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -35,3 +35,7 @@ tr td input .delete_box:checked {
 .contentCenter {
     align-content: center;
 }
+
+.resultDataTable {
+    padding-left: 40%;
+}
