--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -40,6 +40,10 @@ tr td input .delete_box:checked {
     padding-left: 40%;
 }
 
+.bottomPadTiny {
+    padding-bottom: 10px;
+}
+
 .noPadLeft {
     padding-left: 0;
 }
@@ -48,51 +52,3 @@ tr td input .delete_box:checked {
     padding-left: 10px;
 }
 
-tr.leaders {
-    max-width: 60em;
-    width: 5em;
-    padding: 0;
-    overflow-x: hidden;
-}
-
-thead.leaders {
-    max-width: 60em;
-    padding: 0;
-    overflow-x: hidden;
-}
-
-tr.leaders td::before {
-    float: left;
-    width: 0;
-    white-space: nowrap;
-    content: "...................................................................................................................";
-}
-
-thead.leaders th::before {
-    float: left;
-    width: 0;
-    white-space: nowrap;
-    content: "...................................................................................................................";
-}
-
-tr.leaders span:first-child {
-    padding-right: 0;
-    background: white;
-}
-
-thead.leaders span:first-child {
-    padding-right: 0;
-    background: white;
-}
-
-tr.leaders span + span {
-    float: right;
-    /*padding-left: 0.33em;*/
-    background: white;
-}
-
-thead.leaders span + span {
-    float: right;
-    /*padding-left: 0.33em;*/
-    background: white;
-}
