some styling stuff

--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -52,11 +52,7 @@ tr td input .delete_box:checked {
     padding-left: 10px;
 }
 
-.row:checked td {
-    background-color: #cd5c5c;
-}
-
 .delete {
-    background-color: indianred;
+    background-color: #F08080;
 }
 
