--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -31,6 +31,10 @@ tr:hover {
     background-color: #f5f5f5
 }
 
+tr:hover th {
+    background-color: #ffffff;
+}
+
 .tableData {
     padding-left: 10%;
     vertical-align: middle;
@@ -87,4 +91,8 @@ tr:hover {
 
 .viewScoresBtn {
 
+}
+
+.test {
+    background-color: red;
 }
