--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -43,6 +43,10 @@ tr:hover .homeCourseHeader {
     background-color: #f5f5f5;
 }
 
+.pointer:hover td {
+    background-color: #ffffff;
+}
+
 .tableData {
     padding-left: 10%;
     vertical-align: middle;
@@ -103,6 +107,14 @@ tr:hover .homeCourseHeader {
 
 .test {
     background-color: red;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.nav-item:hover {
+    background-color: #e7e7e7;
 }
 
 
