Many more fixes
-noted bug on score edit
-removed score post checkboxes
-worked on styling of some result views
-other random stuff

--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -68,6 +68,11 @@ tr:hover .homeCourseHeader {
     padding-left: 40%;
 }
 
+.resultDataPad {
+    padding-left: 0;
+    padding-right: 0;
+}
+
 .bottomPadTiny {
     padding-bottom: 10px;
 }
