--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -27,6 +27,10 @@ tr td input .delete_box:checked {
     text-decoration: underline;
 }
 
+.table tbody tr td {
+    vertical-align: middle;
+}
+
 tr:hover {
     background-color: #f5f5f5
 }
@@ -129,6 +133,32 @@ tr:hover .homeCourseHeader {
 .bottomBorder {
     border-bottom: 1px solid #eee;
 }
+
+.noBottomMargin {
+    margin-bottom: 0;
+}
+
+.fixedWidthCell {
+    min-width: 125px;
+    max-width: 125px;
+}
+
+.responsiveOverflow {
+    overflow: visible;
+    min-width: 150px;
+    max-width: 150px;
+}
+
+.fixedHeight {
+    min-height:  55px;
+    max-height: 55px;
+    height: 55px;
+
+    /*trying hanging indent*/
+    /*padding-left: 90px;*/
+    /*text-indent: -5px;*/
+}
+
 
 
 
