--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -16,6 +16,7 @@
     margin-top: 0;
 }
 
+
 tr td input .delete_box:checked {
     background-color: indianred;
 }
@@ -164,8 +165,17 @@ tr:hover .homeCourseHeader {
     text-align: right;
 }
 
+.centerMargin {
+    margin: 0 auto;
+}
+
 .bottomBorder {
     border-bottom: 1px solid #eee;
+}
+
+.handicapTable {
+    border-bottom: 1px solid darkgray;
+    padding-bottom: 10px;
 }
 
 .noBottomMargin {
