styling and bug fixes

--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -161,6 +161,8 @@ tr:hover .homeCourseHeader {
     background-color: #e7e7e7;
 }
 
+.editCourse{}
+
 .changePassHeaders {
     text-align: right;
 }
