--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -161,7 +161,15 @@ tr:hover .homeCourseHeader {
     background-color: #e7e7e7;
 }
 
-.editCourse{}
+.selectedCourse {
+    /*background-color: #90ee90;*/
+}
+
+tr td select option.denotation {
+    /*font-style: italic;
+    font-weight: ;*/
+
+}
 
 .changePassHeaders {
     text-align: right;
