score edit styling changes
course select list no longer zooms all the way in when opened

--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -34,7 +34,13 @@ tr td input .delete_box:checked {
         .smallFont {
             font-size: 8pt;
         }
+
+        .courseOption {
+            font-size: 50px;
+        }
     }
+
+
 
 .fixedHeader {
     position: fixed;
