Adding Cuttergolf.com link to home page

--- a/assets/css/Site.css
+++ b/assets/css/Site.css
@@ -214,5 +214,9 @@ http://stackoverflow.com/questions/715677/trouble-with-jquery-dialog-and-datepic
     max-width: 150px;
 }
 
+.topPad {
+    padding-top: 100px;
+}
+
 .fixedHeight {
 }
